welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:14: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
	if (irem(a)==irem(b)){
        ^